--- a/style.css
+++ b/style.css
@@ -129,11 +129,13 @@ h2 {
 }
 
 .checkboxs {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
     gap: 1rem;
     margin-bottom: 2rem;
 }
+
 
 .switch {
     position: relative;
@@ -243,4 +245,56 @@ button:hover {
     .range-slider {
         width: 100%;
     }
+}
+
+
+
+ /* copy code notifications */
+ .notifications{
+  display: none;
+  position: fixed;
+}
+.success {
+font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+width: 320px;
+padding: 12px;
+display: flex;
+flex-direction: row;
+align-items: center;
+justify-content: start;
+background: #84D65A;
+border-radius: 8px;
+box-shadow: 0px 0px 5px -3px #111;
+position: absolute;
+top: -21rem;
+right: -25rem;
+z-index: 100;
+}
+
+.success__icon {
+width: 20px;
+height: 20px;
+transform: translateY(-2px);
+margin-right: 8px;
+}
+
+.success__icon path {
+fill: #393A37;
+}
+
+.success__title {
+font-weight: 500;
+font-size: 14px;
+color: #393A37;
+}
+
+.success__close {
+width: 20px;
+height: 20px;
+cursor: pointer;
+margin-left: auto;
+}
+
+.success__close path {
+fill: #393A37;
 }
